Issue #3168479 by tmakiel: Fix spacing in reference content paragraph

--- a/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_reference_content.scss
@@ -22,7 +22,7 @@ $d-p-reference-content-content-padding: 5px !default;
   }
 
   > .field--name-field-d-p-reference-content {
-    padding-top: $d-p-reference-content-padding-top;
+    padding-top: 1.51rem;
     padding-bottom: $d-p-reference-content-padding-bottom;
 
 
@@ -39,5 +39,9 @@ $d-p-reference-content-content-padding: 5px !default;
         padding: 0 $d-p-reference-content-item-padding $d-p-reference-content-item-padding 0;
       }
     }
+  }
+
+  .field--type-text-long > :last-child {
+    margin-bottom: 0;
   }
 }
